--- a/src/app/index.html
+++ b/src/app/index.html
@@ -33,10 +33,10 @@
     <!--angular scripts-->
     <script src="dist/js/angular/angular.min.js"></script>
     <script src="dist/js/angular/angular-route.min.js"></script>
-    <script src="dist/js/angular/routingScript.js"></script>
+    <script src="/angular/routingScript.js"></script>
 
     <!--controllers-->
-    <script src="dist/js/angular/pcuController.js"></script>
+    <script src="/angular/pcuController.js"></script>
 
     <!--harsha css-->
     <link rel="stylesheet" href="dist/css/harsha.css">
