--- a/src/app/components/pcusheet/pcusheet.html
+++ b/src/app/components/pcusheet/pcusheet.html
@@ -31,12 +31,12 @@
             <li><a href="#labtest" data-toggle="tab">Lab Tests & Lab Results</a></li>
         </ul>
         <div class="tab-content transparenta">
-            <div class="tab-pane active" id="personal" ng-include="'../pages/pcusheet/personal.html'"></div>
-            <div class="tab-pane" id="admission" ng-include="'../pages/pcusheet/admission.html'"></div>
-            <div class="tab-pane" id="status" ng-include="'../pages/pcusheet/admission.html'"></div>
-            <div class="tab-pane" id="prescription" ng-include="'../pages/pcusheet/prescription.html'"></div>
-            <div class="tab-pane" id="drugs" ng-include="'../pages/pcusheet/drugs.html'"></div>
-            <div class="tab-pane" id="labtest" ng-include="'../pages/pcusheet/labtest.html'"></div>
+            <div class="tab-pane active" id="personal" ng-include="'./pcusheet/personal.html'"></div>
+            <div class="tab-pane" id="admission" ng-include="'./pcusheet/admission.html'"></div>
+            <div class="tab-pane" id="status" ng-include="'./pcusheet/admission.html'"></div>
+            <div class="tab-pane" id="prescription" ng-include="'./pcusheet/prescription.html'"></div>
+            <div class="tab-pane" id="drugs" ng-include="'./pcusheet/drugs.html'"></div>
+            <div class="tab-pane" id="labtest" ng-include="'./pcusheet/labtest.html'"></div>
 
         </div>
         <!-- /.tab-content -->
