--- a/src/app/index.html
+++ b/src/app/index.html
@@ -7,7 +7,7 @@
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <!-- Bootstrap 3.3.6 -->
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.css">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
     <!-- Ionicons -->
@@ -31,12 +31,13 @@
 
     <!--<base href="/">-->
     <!--angular scripts-->
-    <script src="node_modules/angular/angular.min.js"></script>
-    <script src="node_modules/angular-route/angular-route.min.js"></script>
-    <script src="/angular/routingScript.js"></script>
+    <script src="../../node_modules/angular/angular.js"></script>
+    <script src="../../node_modules/angular-route/angular-route.js"></script>
+
+    <script src="app.module.js"></script>
 
     <!--controllers-->
-    <script src="/angular/pcuController.js"></script>
+    <script src="components/pcusheet/pcu.controller.js"></script>
 
     <!--harsha css-->
     <link rel="stylesheet" href="dist/css/harsha.css">
