--- a/src/app/login.html
+++ b/src/app/login.html
@@ -26,7 +26,7 @@
 <div class="login-box" onload="CheckUser()">
   <div class="login-logo">
 
-    <a href="../SE%20works/AF/AF/project/AdminLTE/index2.html"><b>Login</b>[PCU]</a>
+    <a href="#"><b>Login</b>[PCU]</a>
   </div>
   <div class="login-box-body">
     <p class="login-box-msg">Sign in to start your session</p>
